[gd_scene load_steps=5 format=3 uid="uid://dh533okqqrqoe"]

[ext_resource type="FontFile" uid="uid://d00vm0x0a7tly" path="res://sub_title.tres" id="1"]
[ext_resource type="Script" path="res://scenes/levels/battle.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dc3svpklgyueu" path="res://scenes/misc/winner_alert.tscn" id="3_cvldv"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.92549, 0.305882, 0.305882, 1)

[node name="Battle" type="Node2D"]
script = ExtResource("2")

[node name="temp_bg" type="ColorRect" parent="."]
offset_right = 1024.0
offset_bottom = 600.0

[node name="change_scene_to_file" type="Button" parent="."]
offset_left = 30.0
offset_top = 16.0
offset_right = 252.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("1")
text = "세팅하기"

[node name="defense_area" type="Polygon2D" parent="."]
position = Vector2(30, 150)
color = Color(0.901961, 0.878431, 0.913725, 1)
polygon = PackedVector2Array(2.08165e-12, 2.08165e-12, 450, 2.08165e-12, 450, 400, 2.08165e-12, 400)

[node name="back" type="Node2D" parent="defense_area"]
position = Vector2(2.08165e-12, 2.08165e-12)

[node name="container" type="Sprite2D" parent="defense_area/back"]

[node name="center" type="Line2D" parent="defense_area"]
position = Vector2(150, 2.08165e-12)
points = PackedVector2Array(2.08165e-12, 400, 0, 0)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="container" type="Sprite2D" parent="defense_area/center"]

[node name="front" type="Line2D" parent="defense_area"]
position = Vector2(300, 2.08165e-12)
points = PackedVector2Array(0, 0, 2.08165e-12, 400)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="container" type="Sprite2D" parent="defense_area/front"]

[node name="attack_area" type="Polygon2D" parent="."]
position = Vector2(540, 150)
color = Color(0.901961, 0.878431, 0.913725, 1)
polygon = PackedVector2Array(2.08165e-12, 2.08165e-12, 450, 2.08165e-12, 450, 400, 2.08165e-12, 400)

[node name="back" type="Node2D" parent="attack_area"]
position = Vector2(2.08165e-12, 2.08165e-12)

[node name="container" type="Sprite2D" parent="attack_area/back"]

[node name="center" type="Line2D" parent="attack_area"]
position = Vector2(150, 2.08165e-12)
points = PackedVector2Array(0, 0, 2.08165e-12, 400)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="container" type="Sprite2D" parent="attack_area/center"]

[node name="front" type="Line2D" parent="attack_area"]
position = Vector2(300, 2.08165e-12)
points = PackedVector2Array(2.08165e-12, 400, 0, 0)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="container" type="Sprite2D" parent="attack_area/front"]

[node name="winner_alert" parent="." instance=ExtResource("3_cvldv")]
visible = false
offset_left = 169.0
offset_top = 162.0
offset_right = 869.0
offset_bottom = 462.0

[connection signal="pressed" from="change_scene_to_file" to="." method="_on_change_scene_pressed"]
